[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["command-line-interface"]
description = "Get most recent version of a crate"
documentation = "https://docs.rs/crate-version"
edition = "2018"
homepage = "https://github.com/davidpdrsn/crate-version"
license = "MIT"
name = "crate-version"
readme = "README.md"
repository = "https://github.com/davidpdrsn/crate-version.git"
version = "0.1.0"

[dependencies]
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"
reqwest = "0.9.18"
structopt = "0.2.18"
clipboard = "0.5.0"
